--- a/Quiz.css
+++ b/Quiz.css
@@ -9,92 +9,76 @@ body{
     align-items: center;
     justify-content: center;
 }
+
 /* Design for ALl Boxes */
 .questionContainer, .infoContainer, .resultContainer {
     background-color: #14213D;
-    width: 50%;
+    width: 40%;
     margin: 30px;
     padding: 30px;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 #FCA31f;
+    box-shadow: 0 0 20px 0 black, 0 5px 5px 0 black;
     border-radius: 12px;
-    justify-content: center;
-    align-items: center;
-}
-
-.quizHeader, .questionNumber, .question {
     text-align: center;
 }
 
-.question, .infoList{
-    background-color: white;
+.quizHeader {
+	margin-top: 0;
+	margin-bottom: 30px;
+	font-weight: 300;
+    color: white;
+    font-size: 60px;
+}
+
+.question, .infoList, .scoreBox{
+    background-color: #628395;
+    color: white;
     width: 100%;
     margin: 20px 5px 5px 0;
     padding: 20px;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 #FCA31f;
     border-radius: 10px;
 }
 
 .questionNumber, .infoTitle{
-  font-size: larger;
-  margin-bottom: 10px;
+  font-size: 25px;
 }
 
-hr {
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
 .hr{
-    border: 2px solid #14213D;
-}
-
-ul {
-    list-style:none;
-    padding:0;
-    margin:0;
+    border: 2px solid white;
+    border-radius: 15px;
+    margin-top: 10px;
 }
 
 .answer {
-    padding:10px;
-    background:#f7f7f7;
+    margin: 15px;
+    padding: 8px 25px 8px 8px;
+    font-size: 20px;
 }
+.corAns{
+    border-radius: 15px;
+    padding: 8px 35%;
+} #q1,#q2{
+    padding: 8px 25%;
+  }
 
 .buttons {
-    padding: 10px 20px;
+    padding: 7px 15px;
     background-color: #FCA31f;
     color: black;
     border-radius: 15px;
-    border: 0;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 16px;
     margin-top: 10px;
     margin-left: 10px;
     float: right;
 }
 
 .buttons:hover{
-    background-color: green;
+    background-color: #14213D;
     transition: 0.15s;
-    color: white;
-}
-
-.scoreText{
-    color: white;
-}
-
-.quizHeader {
-	margin-top: 0;
-	margin-bottom: 2rem;
-	font-weight: 300;
-    color: white;
-    font-size: 4.0rem;
-	line-height: 1.2;
-	letter-spacing: -.1rem;
-}
-
-.corAns{
-    border-radius: 15px;
-    padding: 8px;
-
+    color: #FCA31f;
+    transform: scale(1.05);
+    overflow: hidden;
+    border: 3px solid #FCA31f;
 }
 
 #progressBar {
@@ -105,37 +89,40 @@ ul {
 .timer {
     text-align: right;
     font-size: 20px;
-    font-family: 'Open Sans', sans-serif;
 }
 
-#timeLeft , #timeText{
+#timeLeft , #timeText, #timer2, .scoreText{
     color: white;
 }
 
 #timer2 {
-    color: white;
     padding: 23px 16px 16px;
     position: fixed;
     top: 45%;
-    right: 10%;
+    right: 22%;
     font-size: 15px;
-    float: right;
     text-align: center;
     background-color: #14213D;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 #FCA31f;
-    border-radius: 1000px;
+    box-shadow: 0 0 10px 0 black;
+    border-radius: 50%;
     height: 110px;
     width: 110px;
 }
 
 #timer2s{
-    font-size: 30px;
+    font-size: 35px;
 }
 
-#backTop {
+#backTop{
+    background-color: #628395;
     color: white;
-    font-size: 15px;
+    position: fixed;
+    bottom: 10%;
+    right: 24%;
+    font-size: 30px;
+    border: 5px solid #14213D;
+
 }
-#backTop:hover {
-    color: #FCA31f;
+.infoList {
+    font-size: larger;
 }
