--- a/EditorNiamat.css
+++ b/EditorNiamat.css
@@ -40,19 +40,22 @@ card:hover .details a {
 }
 
 /* Buttons CSS */
+
 .buttons {
-    padding: 10px 20px;
+    padding: 7px 30px;
     background-color: #FCA31f;
     color: black;
     border-radius: 15px;
-    border: 0;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 16px;
     margin-top: 10px;
-    position: relative;
+    margin-left: 10px;
 }
+
 .buttons:hover{
-    background-color: green;
+    background-color: #14213D;
     transition: 0.15s;
-    color: white;
+    color: #FCA31f;
+    transform: scale(1.05);
+    border: 3px solid #FCA31f;
 }
